--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,8 @@
 
 html, body {
   margin: 0;
+  height: 100%;
+  width: 100%;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -17,5 +19,4 @@ html, body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-
-  }
+}
