--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -128,8 +128,8 @@
   --shadow-2: 0px 8px 16px 0px rgba(2, 2, 3, 0.32);
   --shadow-3: 0px 16px 32px 0px rgba(2, 2, 3, 0.48);
   --shadow-default: var(--shadow-1);
-  --font-family-default: 'IBM Plex Sans', sans-serif;
-  --font-family-code: 'ReplitHack', 'IBM Plex Mono', monospace;
+  --font-family-default: 'IBM Plex Sans',sans-serif;
+  --font-family-code: 'ReplitHack','IBM Plex Mono',monospace;
   --font-size-small: 12px;
   --line-height-small: 1.5;
   --font-size-default: 14px;
@@ -155,35 +155,37 @@
   --white: #FCFCFC;
 }
 
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-html, body, #root {
-  margin: 0;
   height: 100%;
   width: 100%;
-  background-color: var(--background-root);
-  font-family: var(--font-family-default);
-  font-size: var(--font-size-default);
-  color: var(--foreground-default);
-  --interactive-background: var(--background-default);
-  --interactive-background--active: var(--background-higher);
-  --interactive-border: var(--outline-dimmer);
-  --interactive-border--hover: var(--outline-default);
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-size: var(--font-size-header-big);
+}
+
+h2 {
+  font-size: var(--font-size-header-default);
+}
+
+.buttons {
+  display: flex;
+  margin-top: 5px;
+  justify-content: center;
+  width: 75%;
+}
+
+.btn {
+  padding: 7px 25px;
+  margin: 3px;
+  border-radius: var(--border-radius-4);
+}
+
+.btn-primary {
+  background-color: var(--accent-blue-default);
 }
